<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/addmeeting_toolbar"
        layout="@layout/layout_toolbar"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spinner_meetingDate"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addmeeting_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@drawable/rounded_corner"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:paddingRight="@dimen/dimen_16dp"
        android:hint="@string/meetingDate"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_16dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dimen_16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spinner_startTime"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_meetingDate"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@drawable/rounded_corner"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:paddingRight="@dimen/dimen_16dp"
        android:hint="@string/meetingStartTime"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_16dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dimen_16dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spinner_endTime"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_startTime"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@drawable/rounded_corner"
        android:drawableRight="@android:drawable/arrow_down_float"
        android:paddingRight="@dimen/dimen_16dp"
        android:hint="@string/meetingEndTime"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_16dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/dimen_16dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_descp"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:lines="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@+id/spinner_endTime"
        android:hint="@string/descp"
        android:gravity="start"
        android:padding="@dimen/dimen_8dp"
        android:background="@drawable/rounded_corner"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="@dimen/dimen_16dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_descp"/>

    <ProgressBar
        android:id="@+id/pb_schedule"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:indeterminateTint="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>